AC_INIT([osgSDL Library], [1.0.0], 
        [contactname@domain.com], 
        [osgSDL])
AM_INIT_AUTOMAKE
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AM_PATH_SDL( 1.2.0 )

AC_OUTPUT( 
osgSDL.pc
Makefile
src/Makefile
src/osgSDL/Makefile
src/libsball/Makefile
include/Makefile
include/osgSDL/Makefile
include/libsball/Makefile
)
